--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/07/2020 01:49:00 PM</p>
+    <p class="lastupdate">09/07/2020 01:54:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">105.8&#176;F</td>
+        <td class="data">106.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">105.8&#176;F</td>
+        <td class="data">106.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">105.8&#176;F</td>
+        <td class="data">106.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">51.9&#176;F</td>
+        <td class="data">50.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">17%</td>
+        <td class="data">16%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.722 inHg (-0.073)</td>
+        <td class="data">29.721 inHg (-0.073)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">2 mph N (0&#176;)</td>
+        <td class="data">4 mph NNE (22&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">86.2&#176;F</td>
+        <td class="data">86.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -153,8 +153,8 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="01:48:30 PM">
-            105.8</span><br/>
+          <span title="01:52:46 PM">
+            106.1</span><br/>
           <span title="07:29:05 AM">
             67.6</span>
         </td>
@@ -187,8 +187,8 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="01:48:30 PM" class="hival">
-            105.8</span>
+          <span title="01:52:46 PM" class="hival">
+            106.1</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="04:04:42 PM (Sunday)" class="hival">
@@ -305,20 +305,20 @@
         <td class="data new_row hilo_day">
           <span title="12:09:01 AM">
             29.836</span><br/>
-          <span title="01:47:02 PM">
-            29.720</span>
+          <span title="01:49:02 PM">
+            29.719</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="09:59:02 AM (Sunday)">
             29.954</span><br/>
-          <span title="01:47:02 PM (Monday)">
-            29.720</span>
+          <span title="01:49:02 PM (Monday)">
+            29.719</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/02/2020 09:40:02 AM">
             30.063</span><br/>
-          <span title="09/07/2020 01:47:02 PM">
-            29.720</span>
+          <span title="09/07/2020 01:49:02 PM">
+            29.719</span>
         </td>
         <td class="data new_row hilo_year">
           <span title="07/04/2020 08:07:00 AM">
@@ -444,11 +444,11 @@
         </td>
         <td class="data new_row hilo_week">
           1<br/>
-          4
+          5
         </td>
         <td class="data new_row hilo_month">
           1<br/>
-          2
+          3
         </td>
         <td class="data new_row hilo_year">
           2<br/>
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">100%</td>
+      <td class="data">98%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">5 days, 23 hours, 2 minutes</td>
+      <td class="data">5 days, 23 hours, 7 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">5 days, 23 hours, 2 minutes</td>
+      <td class="data">5 days, 23 hours, 7 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
