--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/07/2020 02:29:00 PM</p>
+    <p class="lastupdate">09/07/2020 02:34:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">108.6&#176;F</td>
+        <td class="data">108.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">108.6&#176;F</td>
+        <td class="data">108.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">108.6&#176;F</td>
+        <td class="data">108.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">50.8&#176;F</td>
+        <td class="data">51.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.698 inHg (-0.083)</td>
+        <td class="data">29.697 inHg (-0.079)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">2 mph E (90&#176;)</td>
+        <td class="data">1 mph NNE (22&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">87.1&#176;F</td>
+        <td class="data">87.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -153,8 +153,8 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="02:28:08 PM">
-            108.6</span><br/>
+          <span title="02:33:46 PM">
+            108.9</span><br/>
           <span title="07:29:05 AM">
             67.6</span>
         </td>
@@ -187,8 +187,8 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="02:28:08 PM" class="hival">
-            108.6</span>
+          <span title="02:33:46 PM" class="hival">
+            108.9</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="04:04:42 PM (Sunday)" class="hival">
@@ -305,32 +305,32 @@
         <td class="data new_row hilo_day">
           <span title="12:09:01 AM">
             29.836</span><br/>
-          <span title="02:28:02 PM">
-            29.698</span>
+          <span title="02:31:02 PM">
+            29.695</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="09:59:02 AM (Sunday)">
             29.954</span><br/>
-          <span title="02:28:02 PM (Monday)">
-            29.698</span>
+          <span title="02:31:02 PM (Monday)">
+            29.695</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/02/2020 09:40:02 AM">
             30.063</span><br/>
-          <span title="09/07/2020 02:28:02 PM">
-            29.698</span>
+          <span title="09/07/2020 02:31:02 PM">
+            29.695</span>
         </td>
         <td class="data new_row hilo_year">
           <span title="07/04/2020 08:07:00 AM">
             30.065</span><br/>
-          <span title="06/24/2020 05:17:59 PM">
-            29.697</span>
+          <span title="09/07/2020 02:31:02 PM">
+            29.695</span>
         </td>
         <td class="data new_row hilo_rainyear">
           <span title="07/04/2020 08:07:00 AM">
             30.065</span><br/>
-          <span title="06/24/2020 05:17:59 PM">
-            29.697</span>
+          <span title="09/07/2020 02:31:02 PM">
+            29.695</span>
         </td>
         <td class="units"> inHg</td>
       </tr>
@@ -470,8 +470,8 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="02:26:02 PM">
-            87.1</span><br/>
+          <span title="02:32:02 PM">
+            87.2</span><br/>
           <span title="07:35:01 AM">
             78.3</span>
         </td>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">5 days, 23 hours, 42 minutes</td>
+      <td class="data">5 days, 23 hours, 47 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">5 days, 23 hours, 42 minutes</td>
+      <td class="data">5 days, 23 hours, 47 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
